@@ -4,8 +4,7 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
@@ -13,10 +12,9 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI customerOpenAPI() {
         return new OpenAPI()
-                .servers(
-                        Arrays.asList(
-                                new Server().url("https://9271.pro604cr.amypo.ai/")
-                        )
-                );
-    }
+                // You need to change the port as per your server
+                .servers(List.of(
+                        new Server().url("https://9271.pro604cr.amypo.ai/")
+                ));
+        }
 }
